--- a/paper_repo/analysis/model_based_analyses.Rmd
+++ b/paper_repo/analysis/model_based_analyses.Rmd
@@ -59,7 +59,7 @@ fig_dir <- "../figs/"
 ```{r}
 read_model_fit_data <- function(participant) {
   path <- "model_fits/"
-  models = c("lot", "gp", "comp_gp", "ridge", "linear_1", "linear_or_prev_1", "lot_nonrecursive", "transformer_2", "transformer_3", "transformer_13") 
+  models = c("lot", "gp", "comp_gp", "ridge", "linear", "linear_or_prev", "lot_nonrecursive", "transformer_2", "transformer_3", "transformer_13") 
   df <- data.frame()
   for (i in seq_along(models)) {
     model_name <- models[i]
@@ -89,10 +89,10 @@ df_monkey <- read_model_fit_data("monkeys") %>%
 df_all <- bind_rows(df_adult, df_kid, df_monkey) %>%
           mutate(model = ifelse(model=="comp_gp", "Comp. GP", model),
                   model = ifelse(model=="gp", "GP", model),
-                  model = ifelse(model=="linear_1", "Linear", model),
+                  model = ifelse(model=="linear", "Linear", model),
                   model = ifelse(model=="ridge", "Parametric", model),
                   model = ifelse(model=="lot", "LoT", model),
-                  model = ifelse(model=="linear_or_prev_1", "Linear + Prev.", model),
+                  model = ifelse(model=="linear_or_prev", "Linear + Prev.", model),
                   model = ifelse(model=="lot_nonrecursive", "Nonrecursive LoT", model),
                   model = ifelse(model=="transformer_2", "Transformer (2)", model),
                   model = ifelse(model=="transformer_3", "Transformer (3)", model),
@@ -115,7 +115,7 @@ df_all$model = factor(df_all$model, levels = c("Linear",  "Linear + Prev.",  "Pa
 ```
 
 ```{r}
-mean_LL_df <- df_all_transformer %>% 
+mean_LL_df <- df_all %>% 
               group_by(agent, model, subj_id, r_id, func.name) %>%
               summarize(func_LL = sum(LL, na.rm = TRUE)) %>%
               group_by(agent, model, subj_id, func.name) %>%
@@ -173,13 +173,14 @@ resample_by_id <- function(data) {
   boot_ids <- sample(ids, size = length(ids), replace = TRUE)
   # for each id in boot_ids, add rows with that id to the df
   return(tibble(data_id = boot_ids, boot = seq_along(boot_ids)) %>%  
-         left_join(data, by = "data_id"))
+         left_join(data, by = "data_id", relationship="many-to-many"))
 }
+
 
 set.seed(123)
 n_boot <- 1000
 
-boot_df <- df_all_transformer %>% 
+boot_df <- df_all %>% 
            compute_top_model() %>%
            mutate(data_id = paste0(agent, "_", subj_id, "_", r_id, "_", func.name, "_", tpt))
 
@@ -204,7 +205,7 @@ ci_summary <- boot_diffs %>%
 
 ```{r}
 # Compute mean parameter estimates
-mean_param_df <- df_all_transformer %>%
+mean_param_df <- df_all %>%
                  distinct(model, agent, subj_id, p_lapse, sd_motor, sd_prev, p_prev, p_rand) %>%
                  group_by(agent, model) %>%
                  summarize(p_lapse=mean(p_lapse),
@@ -247,13 +248,6 @@ kids_table_df <- table_df %>%
        arrange(factor(Age)) 
 
 cat(kable(kids_table_df, format = "latex", booktabs = TRUE, escape = FALSE))
-```
-
-```{r}
-stimuli <- df_kid %>%
-           ungroup() %>%
-           distinct(func.name, tpt, true_x, true_y)
-write.csv(stimuli, "../analyses/data/expt_stimuli.csv", row.names=F)
 ```
 
 
@@ -672,10 +666,10 @@ colormap <-  c(
       #"Polynomial" = "#62C1C6"
 )
 p <- make_main_fig(df_all, colormap)
-ggsave(plot=p, paste0(fig_dir, "model_combined_3.png"), bg="white", width=15, height=7)
+ggsave(plot=p, paste0(fig_dir, "model_combined.png"), bg="white", width=15, height=7)
 ```
 
-# Supplementary plots
+# Model comparison with transformers
 ```{r}
 make_supplementary_fig <- function(df_all, colormap) {
   p2 <- make_boxplot(df_all, colormap)
@@ -744,9 +738,7 @@ ggsave(plot=p, paste0(fig_dir, "model_combined_transformer.png"), bg="white", wi
 
 
 # Monkey training data
-######################
-
-#Aggregate transformer fits to monkey training/ test
+## Aggregate transformer fits to monkey training/ test
 ```{r}
 ll_monkey_train <- data.frame()
 for (i in c(1,2,3,4,5,6,8,10,13)) {
@@ -758,38 +750,161 @@ for (i in c(1,2,3,4,5,6,8,10,13)) {
   file <- paste0("preprocessed_data/model_likelihoods/transformer_", i, "_monkeys.csv")
   ll_monkey_test <- bind_rows(ll_monkey_test, read.csv(file)%>%mutate(context_len = i))
 }
-ll_monkey_all <- bind_rows(ll_monkey_train %>% mutate(mode="train"),
-                           ll_monkey_test %>% mutate(mode="test")) %>%
-                           mutate(correct_distance = correct_distance/screen_w) %>%
-                          mutate(correct_distance = max(correct_distance))
-n_samples <- 100
-n_rows <- nrow(ll_monkey_all)
+
+```
+
+## Test accuracy scatter plot
+```{r}
+n_samples <- 10000
+n_rows <- nrow(ll_monkey_test)
 all_samples_x <- rnorm(n_rows * n_samples)
 all_samples_y <- rnorm(n_rows * n_samples)
-ll_monkey_all <- ll_monkey_all %>%
-  mutate(
-    model_error_x = (model_pred_x - true_x),
-    model_error_y = (model_pred_y - true_y),
-    model_error = sqrt(model_error_x^2 + model_error_y^2),
-    err_x = (pred_x - true_x),
-    err_y = (pred_y - true_y),
-    abs_err = sqrt(err_x^2 + err_y^2),
-  ) %>%
-  rowwise() %>%
-  mutate(
-    model_correct = {
-      start_idx <- (row_number() - 1) * n_samples + 1
-      end_idx <- row_number() * n_samples
-      samples_x <- model_pred_x + model_std_x * all_samples_x[start_idx:end_idx]
-      samples_y <- model_pred_y + model_std_y * all_samples_y[start_idx:end_idx]
-      mask <- (samples_x > 0) & (samples_x < 1) & (samples_y > 0) & (samples_y < 1)
-      samples_x <- subset(samples_x, mask)
-      samples_y <- subset(samples_y, mask)
-      distances <- sqrt((samples_x - true_x)^2 + (samples_y - true_y)^2)
-      mean(distances < correct_distance)
-    }
-  ) %>%
-  ungroup()
+monkey_model_test <- ll_monkey_test %>%
+                 mutate(mode="test") %>%
+                 mutate(correct_distance=correct_distance/range_xy) %>%
+                 mutate(model_error_x = (model_pred_x - true_x),
+                        model_error_y = (model_pred_y - true_y),
+                        model_error = sqrt(model_error_x^2 + model_error_y^2),
+                        err_x = (pred_x - true_x),
+                        err_y = (pred_y - true_y),
+                        abs_err = sqrt(err_x^2 + err_y^2)) %>%
+                rowwise() %>%
+                mutate(model_correct = {
+                            start_idx <- (row_number() - 1) * n_samples + 1
+                            end_idx <- row_number() * n_samples
+                            samples_x <- model_pred_x + model_std_x * all_samples_x[start_idx:end_idx]
+                            samples_y <- model_pred_y + model_std_y * all_samples_y[start_idx:end_idx]
+                            mask <- (samples_x > 0) & (samples_x < max_x) & (samples_y > 0) & (samples_y < max_y)
+                            samples_x <- subset(samples_x, mask)
+                            samples_y <- subset(samples_y, mask)
+                            distances <- sqrt((samples_x - true_x)^2 + (samples_y - true_y)^2)
+                            mean(distances < correct_distance)
+                        }) %>%
+                 group_by(context_len, func.name, subj_id) %>%
+                 summarize(monkey_acc=mean(correct), model_acc=mean(model_correct, na.rm=T)) %>%
+                 group_by(context_len, func.name) %>%
+                 summarize(monkey_acc=mean(monkey_acc), model_acc=mean(model_acc, na.rm=T))
+
+df_test_acc_by_func <- monkey_model_test %>%
+          filter(!is.na(context_len) & context_len %in% c(1,2,3,13)) 
+
+df_test_patterns <- read.csv(paste0(data_dir, "participants/kids.csv")) %>%
+                    rename(func.name=seq_id) %>%
+                    distinct(func.name, tpt, true_x, true_y) %>%
+                    group_by(func.name) %>%
+                    mutate(true_y = -true_y) %>%
+                    mutate(xrng = max(true_x) - min(true_x),
+                           yrng = max(true_y) - min(true_y)) %>%
+                    mutate(true_x = ifelse(xrng > 0, (true_x - min(true_x))/xrng, 0.5),
+                           true_y = ifelse(yrng > 0, (true_y - min(true_y))/yrng, 0.5)) %>%
+                    distinct(func.name, tpt, true_x, true_y) %>%
+                    crossing(context_len = c(1,2,3,13)) %>%
+                    left_join(df_test_acc_by_func, by = c("func.name", "context_len")) %>%
+                    filter(!is.na(model_acc) & !is.na(monkey_acc)) %>%
+                    arrange(func.name, tpt)
+
+scale_fn <- 0.12
+aspect_ratio <- 1.0
+
+correlations_test <- df_test_acc_by_func %>%
+  group_by(context_len) %>%
+  summarize(r = cor(model_acc, monkey_acc, use = "complete.obs"),
+            r2 = r^2,
+            .groups = 'drop') %>%
+  mutate(mode = "Test")
+
+test_plot <- ggplot() +
+  geom_abline(intercept = 0, slope = 1, linetype = "dashed", alpha = 0.5) +
+
+  geom_path(data = df_test_patterns,
+            aes(x = model_acc + true_x * scale_fn,
+                y = monkey_acc + true_y * scale_fn * aspect_ratio,
+                group = func.name, color = func.name),
+            alpha = 0.7, size = 0.4) +
+
+  geom_point(data = df_test_patterns,
+             aes(x = model_acc + true_x * scale_fn,
+                 y = monkey_acc + true_y * scale_fn * aspect_ratio,
+                 group = func.name, color = func.name),
+             alpha = 0.8, size = 0.3) +
+
+  geom_point(data = df_test_patterns,
+             aes(x = model_acc + true_x * scale_fn,
+                 y = monkey_acc + true_y * scale_fn * aspect_ratio,
+                 group = func.name),
+             color = "black", alpha = 0.05, size = 0.1) +
+
+  geom_text(data = correlations_test,
+            aes(x = 0.12, y = 0.9,
+                label = paste("italic(r) ==", sprintf("%.2f", r))),
+            size = 4, family = "Georgia", parse = TRUE) +
+
+  labs(x = "Transformer accuracy (test)",
+       y = "Monkey accuracy (test)") +
+  scale_x_continuous(breaks=c(0,0.5,1)) +
+  coord_cartesian(xlim = c(-0.02, 1.03), ylim = c(-0.02, 1.02)) +
+  guides(color = "none") +
+  paper_theme +
+  theme(plot.title = element_text(hjust = 0.5, size = 16),
+        axis.title.x=element_text(size=20),
+          axis.title.y=element_text(size=20),
+
+        strip.text = element_text(size = 14)) +
+    facet_wrap(~context_len, nrow = 2,
+           labeller = as_labeller(function(x) paste("Context Length", x)))
+print(test_plot)
+
+ggsave(paste0(fig_dir, "monkey_transformer_corr.png"), width=6,height=5,dpi=1000)
+```
+
+## Train accuracy correlation
+```{r}
+n_samples <- 1000
+n_rows <- nrow(ll_monkey_train)
+all_samples_x <- rnorm(n_rows * n_samples)
+all_samples_y <- rnorm(n_rows * n_samples)
+
+monkey_model_train <- ll_monkey_train %>%
+                 mutate(mode="train") %>%
+                 mutate(correct_distance=80/range_xy) %>%
+                 mutate(model_error_x = (model_pred_x - true_x),
+                        model_error_y = (model_pred_y - true_y),
+                        model_error = sqrt(model_error_x^2 + model_error_y^2),
+                        err_x = (pred_x - true_x),
+                        err_y = (pred_y - true_y),
+                        abs_err = sqrt(err_x^2 + err_y^2),
+                        correct = abs_err <= correct_distance) %>%
+                rowwise() %>%
+                mutate(model_correct = {
+                            start_idx <- (row_number() - 1) * n_samples + 1
+                            end_idx <- row_number() * n_samples
+                            samples_x <- model_pred_x + model_std_x * all_samples_x[start_idx:end_idx]
+                            samples_y <- model_pred_y + model_std_y * all_samples_y[start_idx:end_idx]
+                            mask <- (samples_x > 0) & (samples_x < max_x) & (samples_y > 0) & (samples_y < max_y)
+                            samples_x <- subset(samples_x, mask)
+                            samples_y <- subset(samples_y, mask)
+                            distances <- sqrt((samples_x - true_x)^2 + (samples_y - true_y)^2)
+                            mean(distances < correct_distance)
+                        }) %>% 
+                 group_by(context_len, func.type, subj_id) %>%
+                 summarize(monkey_acc=mean(correct), model_acc=mean(model_correct, na.rm=T)) %>%
+                 group_by(context_len, func.type) %>%
+                 summarize(monkey_acc=mean(monkey_acc), model_acc=mean(model_acc, na.rm=T))
+
+df_train_acc_by_func <- monkey_model_train %>%
+          filter(!is.na(context_len) & context_len %in% c(1,2,3,13)) 
+
+correlations_train <- df_train_acc_by_func %>%
+  group_by(context_len) %>%
+  summarize(r = cor(model_acc, monkey_acc, use = "complete.obs"),
+            r2 = r^2,
+            .groups = 'drop') 
+```
+
+## LLs under each context length
+```{r}
+ll_monkey_all <- bind_rows(ll_monkey_train %>% mutate(mode="train"),
+                            ll_monkey_test %>% mutate(mode="test")) 
 ll_monkey_delta <- ll_monkey_all %>%
   group_by(context_len, mode) %>%
   summarise(
@@ -807,9 +922,7 @@ ll_monkey_delta <- ll_monkey_all %>%
     delta_lower = lower_LL - max_LL,
     delta_upper = upper_LL - max_LL
   )
-```
-#Plot monkey LLs relative to best context length for all context lengths
-```{r}
+
 ll_monkey_transformer <- ggplot(data = ll_monkey_delta) +
   geom_ribbon(aes(x = context_len, ymin = delta_lower, ymax = delta_upper,
                   fill = mode), alpha = 0.3) +
@@ -844,7 +957,6 @@ ggsave(plot=ll_monkey_transformer, paste0(fig_dir, "ll_monkey_transformer.png"),
 
 
 # NeurIPS data: Program-learning example
-########################################
 ```{r}
 preprocess_df_human_neurips <- function(df) {
   df$id <- seq_len(nrow(df))
@@ -982,7 +1094,7 @@ for (f in unique(ex_df$func)) {
 }
 ```
 
-# LoT + Human sequences
+## Plot LoT + Human sequences
 ```{r, fig.width=14, fig.height=2}
 make_sequence_plots <- function(func_name, t_min=NULL, t_max=NULL, n_top=NULL) {
   if (is.null(t_min)) t_min <- min(df_adult$tpt)
@@ -1103,9 +1215,7 @@ ggsave(plot=final_plot, paste0(fig_dir, "example_neurips_predictions.png"), widt
 
 
 # Generate videos
-#################
-
-# Make videos comparing single participant with single model
+## Make videos comparing single participant with single model
 ```{r, echo=F, message=F}
 # Preprocessing
 logsumexp <- function(x) {
